Fixes wraps

--- a/app/blocks/main.css
+++ b/app/blocks/main.css
@@ -20,6 +20,11 @@
     font-weight: bold;
 
     color: #333333;
+
+    margin-left: 20px;
+    margin-top: 0;
+    margin-bottom: 5px;
+    padding-top: 20px;
 }
 
 .main__status {
@@ -27,6 +32,11 @@
     line-height: 14px;
 
     color: #333333;
+
+    margin-left: 20px;
+    margin-top: 0;
+    margin-bottom: 0;
+
 }
 
 .main__place {
@@ -42,12 +52,4 @@
     font-weight: bold;
 
     color: #333333;
-}
-
-.main__temperature-wrap {
-    list-style: none;
-}
-
-.main__cards-wrap {
-    list-style: none;
 }
