--- a/app/blocks/section-heading.css
+++ b/app/blocks/section-heading.css
@@ -7,4 +7,5 @@
 
     margin-top: 0;
     margin-bottom: 0;
+    margin-left: 20px;
 }
